--- a/6장. 생성 패턴.md
+++ b/6장. 생성 패턴.md
@@ -55,3 +55,23 @@
 4. 사용효과
    - 설계 단계에서 프로그램 뼈대를 고민하는 비용을 줄일 수 있고 기술 노하우를 결집시킬 수 있다.
    - 객체의 생성 코드를 별도의 클래스/메서드로 분리함으로써 객체 생성의 변화에 대비하는 데 유용.
+
+## 프로토타입(Prototype)
+
+1. 정의
+   - 클래스가 아닌 기존의 객체(원형 객체)로 부터 자신과 똑같은 객체를 생성하는 패턴
+2. 구성요소
+   - Prototype
+     - 객체를 복제하는 메서드(createClone)을 정의한다.
+   - ConcretePrototype
+     - Prototype 에서 정의한 객체를 복제하는 메서드를 구현한다.
+   - Client
+     - 객체를 복제하는 메서드를 이용해서 새로운 객체를 생성하여 사용한다.
+3. 사용시점
+   - 객체를 생성하는 방식이 너무 동적이거나 다양하다.
+   - 클래스로 부터 객체를 생성하는 것이 자원이나 시간이 너무 많이 소모되거나 복잡하다.
+   - 프로그램을 실행 중간에 객체를 생성해야 한다.
+4. 사용효과
+   - 새로운 객체를 만드는 복잡한 과정을 몰라도 객체를 생성할 수 있다.
+   - 객체라는 것은 실시간으로 생성되는 것이므로 객체의 생성 정보를 실시간으로 결정지을 수 있다.
+   - 클래스를 통해 직접 객체를 생성하는데 필요한 자원의 낭비를 피하는 것이다.
