--- a/6장. 생성 패턴.md
+++ b/6장. 생성 패턴.md
@@ -75,3 +75,27 @@
    - 새로운 객체를 만드는 복잡한 과정을 몰라도 객체를 생성할 수 있다.
    - 객체라는 것은 실시간으로 생성되는 것이므로 객체의 생성 정보를 실시간으로 결정지을 수 있다.
    - 클래스를 통해 직접 객체를 생성하는데 필요한 자원의 낭비를 피하는 것이다.
+
+## 추상 팩토리(Abstract Factory)
+
+1. 정의
+   - 관련성 있는 객체의 집합을 생성하는 인터페이스를 제공하는 패턴
+2. 구성요소
+   - AbstractProduct
+     - 팩토리의 공통 인터페이스를 정의
+     - 각 제품의 부품을 생성하는 기능을 추상 메서드로 선언
+   - Client
+     - AbstractFactory와 AbstractProduct의 공통 인터페이스만을 사용해서 일을 수행
+   - ConcreteProduct
+     - AbstractProduct 공통 인터페이스를 구현
+     - ConcreteFactory 클래스에서 생성되는 구체적인 제품
+   - ConcreteFactory
+     - AbstractFactory 공통 인터페이스를 구현
+     - AbstractFactory 클래스의 추상 메서드를 구현함으로써 구체적인 제품 생성
+3. 사용시점
+   - 관련성 있는 객체군이 존재
+   - 연관된 일련의 객체들을 일관된 방식으로 생성해야 하는 경우
+4. 사용효과
+   - 하나의 팩토리 객체를 통해 생성되는 객체들은 상호 호환성을 보장받는다.
+   - 사용자는 상황이 변해서 다른 객체군을 선택해야 될 때 단순히 팩토리 객체만 교체하면 된다.
+   - 표준화된 방식을 제공하기 때문에 원하는 객체군을 효과적으로 사용할 수 있다.
