구조 패턴 - 브릿지

--- a/7장 구조 패턴.md
+++ b/7장 구조 패턴.md
@@ -20,3 +20,28 @@
 5. 사용효과
    - 인터페이스가 호환되지 않아 쓸 수 없었던 클래스들을 사용할 수 있게 해 준다.
    - 기존 클래스가 제공하는 기능의 안전성을 그대로 유지할 수 있다.
+
+## 브릿지(Bridge)
+
+1. 정의
+   - 추상적 개념과 구체적 구현 사이의 종속성을 제거하여 목적에 맞게 다양한 구현 방법을 사용하도록 제공하는 패턴
+2. 클래스 다이어그램
+   ![브릿지 패턴 클래스다이어그램](./img/bridge_pattern_uml.png)
+3. 구성요소
+   - Abstraction
+     - Implementor 역할의 메서드를 사용해서 기본적인 기능만 기술되어 있는 클래스이다.
+     - 이 인스턴스는 Implementor 역할을 가지고 있다.
+     - 기본적인 기능만이 서술되어 있고 여기서 기술되어 있는 기능들이 바로 Bridge를 통해서 기능을 위임받은 클래스와 교감할 수 있다.
+   - RefinedAbstraction
+     - Abstraction 역할에다 기능을 추가한 역할
+   - Implementor
+     - Abstraction 역할의 인터페이스(API)를 구현하기 위한 메서드를 규정하는 역할이다.
+     - 이런 기능의 구현을 위임 받은 클래스로서, Abstraction 클래스의 기능을 하위 클래스에서 구현하도록 인터페이스로 선언되어 있으며 Bridge의 역할을 담당한다.
+   - ConcreteImplementor
+     - Implementor 인터페이스를 구현한다.
+4. 사용시점
+   - 기본 기능과 확장 가능한 기능이 하나의 클래스에 혼재한다.
+   - 하나는 미래에 변할 가능성이 별로 없고, 하나는 변할 가능성이 많을 때
+5. 사용효과
+   - 추상화된 부분과 실제 구현 부분을 독립적으로 확장 할 수 있다.
+   - 추상적 개념과 구체적 구현 사이에 종속성이 제거되어 다양한 구현 방법을 사용할 수 있게 해준다.
