--- a/7장 구조 패턴.md
+++ b/7장 구조 패턴.md
@@ -45,3 +45,37 @@
 5. 사용효과
    - 추상화된 부분과 실제 구현 부분을 독립적으로 확장 할 수 있다.
    - 추상적 개념과 구체적 구현 사이에 종속성이 제거되어 다양한 구현 방법을 사용할 수 있게 해준다.
+
+## 컴포지트(Composite)
+
+1. 정의
+   - 부분-전체의 관계를 갖는 객체들을 동일한 방식으로 다루는 패턴
+2. 클래스 다이어그램
+   ![컴포지트 패턴 클래스다이어그램](./img/composite_pattern_uml.png)
+3. 구성요소
+   - Leaf
+     - Component 인터페이스를 구현해야 한다.
+     - 다른 요소를 가질 수 없다.
+     - Component 인터페이스 중에 add(), remove(), getChild() 같은 메서드는 필요하지 않아도 상속받거나 구현해야 한다.
+     - 자신에 대한 행동만 정의하면 된다.
+     - Composite 객체의 부품으로 설정한다.
+   - Composite
+     - Coponent 인터페이스를 구현해야 한다.
+     - Leaf나 Composite 같은 Component를 구현한 객체들을 추가할 수 있다.
+     - Component 인터페이스 중에 Leaf와 관련있는 메서드를 필요하지 않아도 상속받거나 구현해야 한다.
+     - 자식 구성요소와 관련된 기능 add(), remove(), getChild()를 구현해야 한다.
+   - Component
+     - Leaf와 Composite를 동일시하기 위한 공통 인터페이스를 제공한다.
+     - 모든 구성요소들은 Leaf인지, Composite인지를 구별하지 않고 서로 교환해서 사용할 수 있다.
+     - Composite뿐만 아니라 Leaf에 대한 메서드까지 정의한다.
+   - Client
+     - Component 인터페이스를 이용하여 복합 객체 내의 객체들을 조작할 수 있다.
+4. 사용시점
+   - 데이터 구조를 계층적으로 표현할 수 있다.
+   - 객체들이 부분-전체의 관계를 갖는다.
+5. 사용효과
+   - 전체나 부분이냐에 상관없이 클라이언트는 단일 인터페이스로 기능을 실행할 수 있다.
+   - 복합 객체와 개별 객체에 대해 똑같은 작업을 적용할 수 있다.
+6. 사용예
+   - GUI: 프레임, 패널과 같은 최상위 구성요소가 있고 그 안에 메뉴나 텍스트, 스크롤바, 버튼 등이 들어 있음
+   - 컴퓨터에 있는 파일 시스템(디렉토리와 파일로 구성)
