--- a/7장 구조 패턴.md
+++ b/7장 구조 패턴.md
@@ -3,7 +3,7 @@
 1. 정의
    - 재사용하려는 클래스가 제공하는 인터페이스와 클라이언트가 사용하는 인터페이스가 다를 경우가 있는 데 어댑터 클래스를 이용하여 인터페이스를 일치시키는 패턴
 2. 클래스 다이어그램
-   ![어댑터 패턴 클래스다이어그램](./img/adapter_pattern_uml.png)
+   - ![어댑터 패턴 클래스다이어그램](./img/adapter_pattern_uml.png)
 3. 구성요소
    - Target
      - 클라이언트에게 필요한 메서드(request())를 제공한다.
@@ -16,7 +16,7 @@
 4. 사용시점
    - 다른 개발자가 작성한 클래스를 재사용해야 한다.
    - 클라이언트가 요구하는 인터페이스와 재사용하려는 클래스의 인터페이스가 일치하지 않는다.
-   - 애플리케이션에 필요한 기능을 이미 구현한 기존의 클래스가 있는데 수정이 불가능하거나 수정을 하였을 경우에 버그가 바라생할 가능성이 높다.
+   - 애플리케이션에 필요한 기능을 이미 구현한 기존의 클래스가 있는데 수정이 불가능하거나 수정을 하였을 경우에 버그가 발생할 가능성이 높다.
 5. 사용효과
    - 인터페이스가 호환되지 않아 쓸 수 없었던 클래스들을 사용할 수 있게 해 준다.
    - 기존 클래스가 제공하는 기능의 안전성을 그대로 유지할 수 있다.
@@ -26,7 +26,7 @@
 1. 정의
    - 추상적 개념과 구체적 구현 사이의 종속성을 제거하여 목적에 맞게 다양한 구현 방법을 사용하도록 제공하는 패턴
 2. 클래스 다이어그램
-   ![브릿지 패턴 클래스다이어그램](./img/bridge_pattern_uml.png)
+   - ![브릿지 패턴 클래스다이어그램](./img/bridge_pattern_uml.png)
 3. 구성요소
    - Abstraction
      - Implementor 역할의 메서드를 사용해서 기본적인 기능만 기술되어 있는 클래스이다.
@@ -51,7 +51,7 @@
 1. 정의
    - 부분-전체의 관계를 갖는 객체들을 동일한 방식으로 다루는 패턴
 2. 클래스 다이어그램
-   ![컴포지트 패턴 클래스다이어그램](./img/composite_pattern_uml.png)
+   - ![컴포지트 패턴 클래스다이어그램](./img/composite_pattern_uml.png)
 3. 구성요소
    - Leaf
      - Component 인터페이스를 구현해야 한다.
@@ -79,3 +79,32 @@
 6. 사용예
    - GUI: 프레임, 패널과 같은 최상위 구성요소가 있고 그 안에 메뉴나 텍스트, 스크롤바, 버튼 등이 들어 있음
    - 컴퓨터에 있는 파일 시스템(디렉토리와 파일로 구성)
+
+## 데코레이터(Decorator)
+
+1. 정의
+   - 기본 기능을 하는 객체와 다양한 부가 기능을 하는 데코레이터들을 조합하여 기능을 확장할 수 있는 패턴
+2. 클래스 다이어그램
+   - ![데코레이터 패턴 클래스다이어그램](./img/decorator_pattern_uml.png)
+3. 구성요소
+   - Component
+     - 기본 기능을 뜻하는 ConcreteComponent와 부가 기능을 뜻하는 Decorator의 공통 기능을 정의한다.
+   - ConcreteComponent
+     - Component의 인터페이스를 구현한다.
+     - 기본 기능을 한다.
+     - 여러 부가기능으로 장식을 할 수 있다.
+   - Decorator
+     - Component와 동일한 인터페이스를 가진다.
+     - 장식할 대상이 되는 Component 역할도 한다.
+     - 자신이 장식하고 있는 Component 객체를 인스턴스 변수로 가지고 있다.
+     - 다양한 부가기능을 나타내는 구체적인 Decorator의 공통 기능(인터페이스)을 제공한다.
+   - ConcreteDecorator
+     - Decorator의 인터페이스를 구현한다.
+     - 기본 기능에 다양한 부가기능을 조합하여 추가할 수 있다.
+4. 사용시점
+   - 기본 기능과 다양한 부가기능이 존재한다.
+   - 부가기능은 기본기능을 활용한다.
+   - 부가기능은 여러가지 방식으로 조합이 가능하다.
+5. 사용효과
+   - 많은 데코레이터를 생성할 수 있다는 것이다.
+   - 실시간으로 특정한 객체에 다양한 행동을 부여할 수 있게 한다.
