구조 패턴 - 퍼사드 패턴

--- a/7장 구조 패턴.md
+++ b/7장 구조 패턴.md
@@ -108,3 +108,28 @@
 5. 사용효과
    - 많은 데코레이터를 생성할 수 있다는 것이다.
    - 실시간으로 특정한 객체에 다양한 행동을 부여할 수 있게 한다.
+
+## 퍼사드(Facade)
+
+1. 정의
+   - 하나의 문제를 해결하기 위해서 여러 클래스에서 제공하는 기능을 이용해야 하는데 그 방식이 복잡하여 창구 역할을 하는 클래스를 내세워 이용방식을 단순하게 만드는 패턴
+2. 클래스 다이어그램
+
+- ![퍼사드 패턴 클래스다이어그램](./img/facade_pattern_uml.png)
+
+3. 구성요소
+   - Client
+     - Facade를 이용한다.
+4. 사용시점
+   - 상위 수준에서 인터페이스를 정의하여 하위 수준의 서브시스템의 기능을 사용할 수 있게 하고자 할 때
+   - 하나의 일 처리를 위해서 여러 클래스(서브시스템)를 이용해야 하고 처리 알고리즘이 복잡할 때
+   - 여러 종류의 라이브러리를 사용해야 하는 경우
+   - Import 구문에 선언된 클래스가 너무 많고 다양하다.
+5. 사용효과
+   - 클라이언트와 서브시스템 간의 직접적인 의존관계를 제거한다.
+   - 서브시스템을 변경해야 할 경우에 클라이언트를 변경할 필요가 없다. 퍼사드만 변경하면 된다.
+
+## 플라이웨이트(Flyweight)
+
+1. 정의
+   - 하나의 객체를 공유하여 여러 개의 참조 객체를 만들어 이용하는 패턴
