--- a/7장 구조 패턴.md
+++ b/7장 구조 패턴.md
@@ -133,3 +133,21 @@
 
 1. 정의
    - 하나의 객체를 공유하여 여러 개의 참조 객체를 만들어 이용하는 패턴
+2. 클래스 다이어그램
+   - - ![플라이웨이트 패턴 클래스다이어그램](./img/flyweight_pattern_uml.png)
+3. 구성요소
+   - Flyweight
+     - 공유하고자 하는 객체를 나타낸다.
+   - FlyweightFactory
+     - 여러 객체에서 서로 공유해서 사용할 수 있는 Flyweight 객체를 생성한다.
+     - Flyweight 객체를 가져올 수 있는 메서드(getFlyweight())를 제공한다.
+   - Client
+     - flyweightFactory를 사용해서 Flyweight를 만들어내서 이용한다.
+4. 사용시점
+   - 상태를 가지지 않는 객체가 여러 곳에서 중복사용되어 메모리가 낭비되고 있다.
+   - 메모리를 많이 사용하는 객체가 존재한다.
+5. 사용효과
+   - 실행시에 객체 인스턴스의 개수를 줄여서 메모리를 절약할 수 있다.
+   - 여러 "가상" 객체의 상태를 한 곳에 집중시켜 놓을 수 있다.
+   - 어떤 클래스의 인스턴스가 아주 많이 필요하지만 모두 똑같은 방식으로 제어할 수 있는 경우에 유용하게 쓰임
+   - 다수의 개체에 공통적인 속성을 별도로 관리하여 메모리 효율을 높여준다.
