구조 패턴 - 프록시

--- a/7장 구조 패턴.md
+++ b/7장 구조 패턴.md
@@ -134,7 +134,7 @@
 1. 정의
    - 하나의 객체를 공유하여 여러 개의 참조 객체를 만들어 이용하는 패턴
 2. 클래스 다이어그램
-   - - ![플라이웨이트 패턴 클래스다이어그램](./img/flyweight_pattern_uml.png)
+   - ![플라이웨이트 패턴 클래스다이어그램](./img/flyweight_pattern_uml.png)
 3. 구성요소
    - Flyweight
      - 공유하고자 하는 객체를 나타낸다.
@@ -151,3 +151,24 @@
    - 여러 "가상" 객체의 상태를 한 곳에 집중시켜 놓을 수 있다.
    - 어떤 클래스의 인스턴스가 아주 많이 필요하지만 모두 똑같은 방식으로 제어할 수 있는 경우에 유용하게 쓰임
    - 다수의 개체에 공통적인 속성을 별도로 관리하여 메모리 효율을 높여준다.
+
+## 프록시(Proxy)
+
+1. 정의
+   - 어떤 객체의 접근을 제어하는 대리 객체를 제공하여 다양한 선행처리(접근제한, 캐시이용 등)를 하는 패턴
+2. 클래스다이어그램
+   - ![프록시 패턴 클래스다이어그램](./img/proxy_pattern_uml.png)
+3. 구성요소
+   - Proxy
+     - Proxy에는 RealSubject 객체에 대한 레퍼런스가 들어 있다.
+     - 클라이언트의 요구를 처리할 수 있으면 본인이 처리하고 처리할 수 없다면 RealSubject에게 위임하여 처리한다.
+   - RealSubject
+     - 실제 작업을 대부분 처리하는 객체이다.
+   - Client
+     - Proxy를 이용한다.
+4. 사용시점
+   - 시스템을 기동하는데 있어서 중요한 역할을 하거나 중대한 영향을 미치는 객체가 존재한다.
+   - 그 객체에 보안이나 성능향상을 위해 접근 제어를 할 필요가 있다.
+5. 사용효과
+   - 캐시를 활용하여 성능을 향상시킬 수 있다.
+   - 접근을 제어하여 보안이 중요한 객체를 보호할 수 있다.
