--- a/8장 행동 패턴.md
+++ b/8장 행동 패턴.md
@@ -55,3 +55,31 @@
 6. 사용예
    - 스케줄러, 스레드 풀, 작업 큐
    - 프로그램의 undo/ redo 기능
+
+## 인터프리터(Interpreter)
+
+1. 정의
+   - 사용자가 명령을 내릴 수 있게 문법 규칙을 정의하고 전달된 문장을 번역하는 인터프리터를 클래스로 만들어 제공하는 패턴
+2. 클래스 다이어그램
+   - ![인터프리터 패턴 클래스다이어그램](./img/Interpreter_pattern_uml.png)
+3. 구성요소
+   - AbstractExpression
+     - 구문 트리의 노드에 공통의 인터페이스를 선언한다.
+   - TerminalExpression
+     - BNF의 터미널 익스프레션에 대응한다.
+   - NonterminalExpression
+     - BNF의 논터미널 익스프레션에 대응한다.
+   - Context
+     - 인터프리터가 구문해석을 수행하도록 정보를 제공한다.
+   - Client(의뢰자)
+     - 구문 트리를 조립하기 위해 TerminalExpression이 NonterminalExpression을 호출한다.
+4. 사용시점
+   - 문법규칙을 가진 언어가 존재하고 그 언어를 번역(해석)할 인터프리터가 필요하다.
+5. 사용효과
+   - 문법 규칙을 가진 언어를 쉽게 구현할 수 있다.
+   - 문법이 클래스에 의해 표현되기 때문에 언어를 쉽게 변경하거나 확장할 수 있다.
+   - 사용자가 다양한 명령을 쉬운 표현 방법으로 전달할 수 있다.
+6. 사용예
+   - 스크립트 언어 및 프로그래밍 언어
+   - DB SQL Query문
+   - Command창에서 프로그램 실행 시 필요한 인자를 전달하는 경우
