행동 패턴 - 이터레이터

--- a/8장 행동 패턴.md
+++ b/8장 행동 패턴.md
@@ -83,3 +83,37 @@
    - 스크립트 언어 및 프로그래밍 언어
    - DB SQL Query문
    - Command창에서 프로그램 실행 시 필요한 인자를 전달하는 경우
+
+## 이터레이터(Iterator)
+
+1. 정의
+   - 집합체 내부 구조에 대한 노출을 피하면서 집합체에 들어 있는 모든 요소들에 접근할 수 있는 방법을 제공하는 패턴
+2. 클래스 다이어그램
+   - ![이터레이터 패턴 클래스다이어그램](./img/iterator_pattern_uml.png)
+3. 구성요소
+   - Iterator
+     - 집합체 요소를 차례로 접근하는 인터페이스를 제공한다.
+     - 다음 요소가 존재하는 지를 알기 위한 hasNext 메서드를 제공한다.
+     - 다음 요소를 얻기 위한 next 메서드를 제공한다.
+     - 집합체를 구성하는 역할은 포함되어서는 안된다.
+   - ConcreteIterator
+     - Iterator 인터페이스를 구현한다.
+     - 반복작업에 필요한 집합체의 정보를 가지고 있다.
+     - 반복작업 중에 현재 위치(커서)를 관리하는 일을 맡고 있다.
+     - 다양한 형태의 이터레이터(역방향, 정방향)를 정의할 수 있다.
+   - Aggregate
+     - Iterator를 생성하는 인터페이스를 제공한다.
+     - Iterator를 생성해서 돌려주는 createIterator 메서드를 제공한다.
+   - ConcreteAggregate
+     - Aggregate 인터페이스를 구현한다.
+     - ConcreteIterator 객체를 생성한다.
+4. 사용시점
+   - 여러개의 요소로 이루어진 집합체가 있다.
+   - 집합체의 각 요소를 나열(열거)하면서 접근하는 코드가 자주 반복된다.
+   - 집합체의 내부 구조가 변경될 가능성이 있다.(예: 배열에서 리스트로 변경)
+5. 사용효과
+   - 집합체의 내부 구조에 대한 직접적인 노출을 막아 집합체의 안전성을 유지할 수 있다.
+   - 집합체의 내부 구조가 변경(예: 리스트에서 배열로 변경)되더라도 구성 객체에게 동일한 방법으로 접근할 수 있다.
+   - 집합체가 객체들의 집합을 구성하는 작업과 각 객체들을 열거하는 작업이 분리되어 있다.
+6. 사용예
+   - 자바 Colleciton 클래스에서 iterator() 메서드 제공
