행동 패턴 - 미디에이터

--- a/8장 행동 패턴.md
+++ b/8장 행동 패턴.md
@@ -117,3 +117,32 @@
    - 집합체가 객체들의 집합을 구성하는 작업과 각 객체들을 열거하는 작업이 분리되어 있다.
 6. 사용예
    - 자바 Colleciton 클래스에서 iterator() 메서드 제공
+
+## 미디에이터(Mediator)
+
+1. 정의
+   여러 객체들이 서로 상호작용하면서 영향을 미칠 때 중개역할을 하는 객체를 중간에 두어 복잡한 통신을 한곳에서 집중해서 제어하도록 하는 패턴
+2. 클래스 다이어그램
+   - ![미디에이터 패턴 클래스다이어그램](./img/mediator_pattern_uml.png)
+3. 구성요소
+   - Mediator
+     - 여러 Colleague들과 상호통신을 해서 조정을 하기 위한 인터페이스를 선언한다.
+     - 통신할 Colleague들과 연결하는 메서드createColleagues()를 선언한다.
+     - Colleague들이 조정을 위해 호출하는 메서드 colleagueChanged()를 선언한다.
+   - ConcreteMediator
+     - Mediator 인터페이스를 구현하여 여러 Colleague들과 상호통신으로 발생하는 문제들을 조정하는 기능을 한다.
+   - Colleague
+     - Mediator와 통신을 하기 위해 필요한 인터페이스를 선언한다.
+     - 통신할 Mediator를 연결하는 setter 메서드를 선언한다.
+   - ConcreteColleague
+     - Colleague 인터페이스를 구현한다.
+4. 사용시점
+   - 객체들 간의 관계가 서로의 상호작용으로 복잡하다.
+   - 다수의 객체가 다수의 객체와 통신한다. N:N 통신
+   - 한 객체의 변경이 일어나면 자신과 그와 연관된 객체들이 양방향으로 서로 영향을 줄 때
+5. 사용효과
+   - 상호작용하는 객체들의 제어 로직을 한 군데 모아놨기 때문에 관리하기가 수월하다.
+   - 객체 간에 오가는 메세지의 종류를 줄이고 단순화시킨다.
+   - 복잡한 상호작용을 하는 복잡한 관계를 단순화시킬 수 있다.
+6. 사용예
+   - 서로 연관된 GUI 구성요소들을 관리하기 위한 용도로 많이 쓰임
