행동 패턴 - 메멘토

--- a/8장 행동 패턴.md
+++ b/8장 행동 패턴.md
@@ -146,3 +146,34 @@
    - 복잡한 상호작용을 하는 복잡한 관계를 단순화시킬 수 있다.
 6. 사용예
    - 서로 연관된 GUI 구성요소들을 관리하기 위한 용도로 많이 쓰임
+
+## 메멘토(Memento)
+
+1. 정의
+   - 객체의 내부를 노출하지 않으면서 객체의 상태를 저장하여 필요할 때 객체 상태를 복원할 수 있는 패턴
+2. 클래스 다이어그램
+   - ![메멘토 패턴 클래스다이어그램](./img/memento_pattern_uml.png)
+3. 구성요소
+   - Originator
+     - 자신의 현재 상태를 나타내는 Memento 객체를 생성한다.
+     - Memento 객체는 특정 시점의 Originator 객체 상태의 스냅샷이다.
+     - Caretaker가 Memento 객체를 요청하는 메서드(createMemento())를 선언한다.
+     - Caretaker로 부터 이전의 Memento를 넘겨 받아 그 Memento를 만든 시점의 상태로 되돌려주는 메서드(setMemento())를 선언한다.
+   - Memento
+     - Originator의 내부 상태정보를 가지고 있다.
+     - Memento는 Originator의 상태를 저장하고 Memento는 Originator가 유지하는 상태의 타입을 알아야 하기 때문에 서로 강하게 결합되어 있다.
+   - Caretaker
+     - Originator의 상태를 보존하기 위해 Memento를 Originator로 부터 넘겨 받아 보관해둔다.
+4. 사용시점
+   - 한 객체의 상태를 보존할 필요가 있다.
+   - Undo/redo 기능이 필요하다.
+   - 실행 취소 기능을 지원하고자 한다.
+5. 사용효과
+   - 저장된 상태를 핵심 객체와는 다른 별도의 객채에 보관하기 때문에 안전하다.
+   - 핵심 객체의 데이터를 계속해서 캡슐화된 상태로 유지할 수 있다.
+   - 복구 기능을 구현하기가 쉽다.
+6. 사용예
+   - 롤 플레잉 게임의 세이브 기능(캐릭터가 죽었을 때 전에 저장해 뒀던 곳에서부터 다시 시작할 수 있도록 한 기능)
+   - 프로그램의 최신 작업 환경 - 프로그램 종료 후 시작할 때 최신 작업 환경으로 세팅
+   - 트랜잭션 처리 중에 오류 발생시 롤백 처리할 때 유용하다.
+   - 텍스트 에디터를 사용하고 있을 때 필요한 텍스트를 실수로 삭제해도 undo라는 기능을 사용하면 삭제하기 전의 상태로 텍스트를 복원할 수 있다.
