--- a/8장 행동 패턴.md
+++ b/8장 행동 패턴.md
@@ -177,3 +177,35 @@
    - 프로그램의 최신 작업 환경 - 프로그램 종료 후 시작할 때 최신 작업 환경으로 세팅
    - 트랜잭션 처리 중에 오류 발생시 롤백 처리할 때 유용하다.
    - 텍스트 에디터를 사용하고 있을 때 필요한 텍스트를 실수로 삭제해도 undo라는 기능을 사용하면 삭제하기 전의 상태로 텍스트를 복원할 수 있다.
+
+## 옵저버(Observer)
+
+1. 정의
+   - 한 객체의 상태가 변하면 그 상태에 의존하는 여러 객체들에게 상태의 변화를 알려주는 패턴
+2. 클래스 다이어그램
+   - ![옵저버 패턴 클래스다이어그램](./img/observer_pattern_uml.png)
+3. 구성요소
+   - Subject
+     - 감시 대상이 되는 상태를 가지고 있다.
+     - Observer 목록을 인스턴스 변수로 가지고 있다.
+     - Observer를 등록하는 메서드(addObserver())를 선언한다.
+     - Observer를 삭제하는 메서드(deleteObserver())를 선언한다.
+     - 현재의 상태를 취득할 수 있는 메서드 (getState())를 선언한다.
+     - 상태의 변경이 발생하면 등록된 Observer들에게 변경된 내용을 알려주는 메서드(notifyObservers())를 선언한다.
+   - ConcreteSubject
+     - Subject 인터페이스를 구현한다.
+   - Observer
+     - Subject로 부터 상태 변화를 통보받는다.
+     - Subject의 상태가 변경되었을 때 호출되는 메서드(update())를 선언한다.
+   - ConcreteObserver
+     - Observer 인터페이스를 구현한다.
+4. 사용시점
+   - 한 객체의 상태가 변경되면 그 객체와 연관된 여러 객체에도 변경이 요구된다.
+   - 한 객체와 연관된 다수의 객체가 통신한다. (일대다 통신)
+   - 객체의 상태가 변경되었다는 메시지는 단방향으로 흐른다.
+   - 변화를 감지하는 클래스의 종류가 유동적이다.
+5. 사용효과
+   - 상태가 바뀌는 특정 객체와 상태 변화를 반영해야 하는 객체 사이의 결합도를 약하게 만들어준다.
+   - 상태 변화를 반영하는 객체를 언제든지 추가하거나 삭제할 수 있다.
+6. 사용예
+   - redux: https://medium.com/@shlee1353/%EB%A6%AC%EC%95%A1%ED%8A%B8-%EB%A6%AC%EB%8D%95%EC%8A%A4-redux-%EC%99%80-observer-%ED%8C%A8%ED%84%B4-a4aae3468a25
