행위 패턴 - 스테이트, 스트래티지

--- a/8장 행동 패턴.md
+++ b/8장 행동 패턴.md
@@ -209,3 +209,63 @@
    - 상태 변화를 반영하는 객체를 언제든지 추가하거나 삭제할 수 있다.
 6. 사용예
    - redux: https://medium.com/@shlee1353/%EB%A6%AC%EC%95%A1%ED%8A%B8-%EB%A6%AC%EB%8D%95%EC%8A%A4-redux-%EC%99%80-observer-%ED%8C%A8%ED%84%B4-a4aae3468a25
+
+## 스테이트(State)
+
+1. 정의
+   - 상태에 의존적인 객체를 상태관점에서 따로 분리하여 객체의 행동을 다루는 패턴
+2. 클래스 다이어그램
+   - ![스테이트 패턴 클래스다이어그램](./img/state_pattern_uml.png)
+3. 구성요소
+   - State
+     - 모든 상태에 사용되는 공통 인터페이스를 선언한다.
+     - 이들 인터페이스는 각 상태에 따라 다른 행동을 하도록 하위 클래스에서 구현이 된다.
+   - ConcreteState
+     - State 인터페이스를 구체적으로 구현한다.
+   - Context
+     - Context 내부 상태를 나타내는 인스턴스 변수(state)를 가지고 있다.
+     - request() 메서드가 호출되면 실제 기능을 본인이 수행하는 대신 내부 상태 객체에게 기능 수행을 위임한다.
+     - 각 상태 클래스에서 상태 변경을 요청해 상태를 바꿀 수 있도록 하는 메서드(setState)가 제공된다.
+4. 사용시점
+   - 객체의 행동에 영향을 미치는 객체의 속성 '상태'가 존재한다.
+   - 상태값을 저장하기 위한 인스턴스 변수를 만들고, 메서드 내에서는 조건문을 써서 다양한 상태를 처리한다.
+   - 프로그래밍하다 보면 개체의 상태에 따라 구체적인 행위를 다르게 작성해야 하는 경우가 있다.
+   - 상태에 따라 동일한 기능 요청의 처리를 다르게 함
+   - 함수 안에 case나 if-else가 중복될 때
+5. 사용효과
+   - 각 상태의 행동을 별개의 클래스로 국지화 - 코드를 수정하거나 이해하기가 쉬워짐
+   - 관리하기 힘든 골칫덩어리 if 선언문들을 없앰
+   - 특정 형식의 상태 추가나 삭제를 빠르고 유연하게 대처할 수 있게 됩니다.
+   - 새로운 상태가 추가되더라도 컨텍스트 코드가 받는 영향은 최소화된다.
+   - 상태에 따른 동작을 구현한 코드가 각 상태 별로 구분되기 때문에 상태별 동작을 수정하기 쉽다.
+6. 사용예
+   - ECount Report에서 resizable, moveable, editable 상태에 따라 다르게 처리
+
+## 스트래티지(Strategy)
+
+1. 정의
+   - 알고리즘을 클래스화해서 객체의 행동을 쉽게 변경할 수 있는 패턴
+2. 클래스 다이어그램
+   - ![스테래티지 패턴 클래스다이어그램](./img/strategy_pattern_uml.png)
+3. 구성요소
+   - Strategy
+     - Strategy 인터페이스를 정의한다.
+   - ConcreteStrategy
+     - Strategy의 인터페이스를 실제로 구현한다.
+     - 객체의 행동을 제어하는 구체적인 전략(알고리즘)을 코딩한다.
+   - Context
+     - ConcreteStrategy의 인스턴스를 가지고 있다.
+     - Strategy 인터페이스를 이용하여 기능을 수행한다.
+     - 실시간으로 구체적인 전략을 바꿀 수 있도록 setter 메서드를 제공한다.
+4. 사용시점
+   - 실시간으로 객체의 행동을 변경해야 할 필요가 있다.
+   - 유사한 기능들이 복잡한 if-else 조건문에 분포되어 있다.
+5. 사용효과
+   - 전략의 수정과 추가에 따른 클라이언트의 의존성을 제거하여 전략을 쉽게 변경할 수 있다.
+   - 실시간으로 전략을 선택하여 객체의 행동을 변경할 수 있다.
+6. 사용예
+   - 포토샵에서 작업한 이미지를 여러 포맷(jpg, gif, png)로 저장할 수 있다.
+   - 게임 캐릭터의 공격무기를 다양하게 선택할 수 있다.
+
+- State 패턴은 상태를 가지는 객체가 내부적으로 상태에 따라 로직을 분리해서 사용한다.
+- Strategy 패턴은 클라이언트가 객체의 행위(전략)를 변경할 수 있다.
