--- a/8장 행동 패턴.md
+++ b/8장 행동 패턴.md
@@ -269,3 +269,31 @@
 
 - State 패턴은 상태를 가지는 객체가 내부적으로 상태에 따라 로직을 분리해서 사용한다.
 - Strategy 패턴은 클라이언트가 객체의 행위(전략)를 변경할 수 있다.
+
+## 템플릿 메서드(Template Method)
+
+1. 정의
+   - 상위 클래스에서 알고리즘의 골격(동작 방식 구조)을 정하고 알고리즘의 여러 단계 중 일부는 하위클래스에서 재정의하는 패턴
+2. 클래스 다이어그램
+   - ![템플릿 메서드 패턴 클래스다이어그램](./img/templateMethod_pattern_uml.png)
+3. 구성요소
+   - AbstractClass
+     - 템플릿 메서드를 정의한다.
+     - 하위 클래스에서 사용된 추상 메서드를 선언한다.
+     - 템플릿 메서드는 기능을 구현할 때 추상 메서드를 호출하여 사용한다.
+   - ConcreteClass
+     - AbstractClass에서 선언되어 있는 추상 메서드를 구현한다.
+4. 사용시점
+   - 여러 단계를 가진 알고리즘의 골격이 존재한다.
+   - 알고리즘의 일부 특정단계에서 상황별로 차이가 난다.
+   - 전체적으로 동일하면서 부분적으로는 다른 구문으로 구성된 코드 블록이 중복된다.
+   - 일정한 절차를 가지고 함수의 몸체가 크다.
+   - 메서드의 몸체가 크고 일정한 절차를 가진 알고리즘의 골격이 존재한다.
+   - 하위클래스에 상위클래스의 메서드와 유사한 메서드가 존재한다.
+   - 하위클래스에 상위클래스의 메서드로 구성된 메서드가 존재한다.
+5. 사용호과
+   - 비슷한 형태의 애플리케이션 제작에 필요한 알고리즘 골격을 일반화하여 재사용할 수 있다.
+   - 차이가 나는 부분만 재정의함으로써 코드 중복 문제를 해결할 수 있다.
+6. 사용예
+   - 프레임워크의 전체 알고리즘을 만들 때 사용된다.
+   - 애플리케이션의 뼈대를 만드는 작업에서 많이 사용된다.
