--- a/8장 행동 패턴.md
+++ b/8장 행동 패턴.md
@@ -297,3 +297,32 @@
 6. 사용예
    - 프레임워크의 전체 알고리즘을 만들 때 사용된다.
    - 애플리케이션의 뼈대를 만드는 작업에서 많이 사용된다.
+
+## 비지터(Visitor)
+
+1. 정의
+   - 집합체(데이터 구조, 자료구조)를 이루는 각 요소를 방문하면서 원하는 처리를 하는 패턴
+2. 클래스 다이어그램
+   - ![비지터 패턴 클래스다이어그램](./img/visitor_pattern_uml.png)
+3. 구성요소
+   - Visitor
+     - 데이터 구조내의 각 객체에 방문하는 메서드(visit())를 선언한다.
+   - ConcreteVisitor
+     - Visitor 인터페이스를 구현한다.
+     - ConcreteAcceptor를 사용하여 Visit() 메서드를 구현한다.
+   - Element
+     - Visitor를 받아 들이는 메서드(accept())를 선언한다.
+     - accept() 메서드는 Visitor를 인자로 받는다.
+   - ConcreteElement
+     - Element 인터페이스를 구현한다.
+   - ObjectStructure
+     - Element를 요소로 가지는 집합체(데이터 구조)이다.
+4. 사용시점
+   - 재귀적인 구조를 가진 집합체가 존재한다.
+   - 각 객체를 여러가지 방식으로 다루어야(처리해야)할 필요가 있다.
+5. 사용효과
+   - 구조 자체를 변경시키지 않으면서도 복합 객체 구조에 새로운 기능을 추가할 수 있다.
+   - 비교적 손쉽게 새로운 기능을 추가할 수 있다.
+   - 비지터에서 수행하는 기능과 관련된 코드를 한 곳에 집중시켜 놓을 수 있다.
+   - 요소 형식에 따라 수행할 구체적 작업을 분리하여 구현할 수 있다.
+   - 새로운 연산을 요소 형식 변경 없이 가능하다.
