--- a/9장. 모델-뷰-XXX 패턴.md
+++ b/9장. 모델-뷰-XXX 패턴.md
@@ -1,3 +1,5 @@
+## 모델 - 뷰 (Model - View)
+
 1. 정의
    - 모델과 뷰로 이루어진 패턴이다.
 2. 클래스 다이어그램
@@ -13,5 +15,32 @@
 5. 장점
    - 단순해서 로직 처리를 직관적으로 할 수 있다.
 6. 단점
+
    - 복잡한 로직 처리를 해야 하는 애플리케이션에는 적합하지 않다.
-     modelView_pattern_uml
+
+## 모델 - 뷰 - 컨트롤러 (Model - View -Controller)
+
+1. 정의
+   - MVC 패턴은 Model + View + Controller를 합친 용어이다.
+2. 클래스 다이어그램
+   - ![모델 뷰 컨트롤러 패턴 클래스다이어그램](./img/modelViewController_pattern_uml.png)
+3. 구성요소
+   - Model
+     - 애플리케이션에서 사용되는 데이터와 그 데이터를 처리한다.
+   - View
+     - 사용자에게 보여지는 UI 부분이다.
+     - 화면에 Model이 가진 데이터를 보여주는 역할을 한다.
+   - Controller
+     - 사용자의 입력을 받고 처리하는 부분이다.
+4. 동작
+   1. 사용자의 Action들은 Controller에 들어오게 된다.
+   2. Controller는 사용자의 Action을 확인하고 Model을 업데이트한다.
+   3. Controller는 Model을 나타내줄 View를 선택한다.
+   4. View는 Model을 이용하여 화면을 나타낸다.
+5. 특징
+   - Controller는 여러개의 View를 선택할 수 있는 1:n 구조이다.
+6. 장점
+   - 보편적으로 많이 사용되는 패턴이고 단순하다.
+7. 단점
+   - View와 Model 사이의 의존성이 높다.
+   - View와 Model의 높은 의존성은 애플리케이션이 커질 수록 복잡하고 유지보수하기 어렵게 만들 수 있다.
