--- a/9장. 모델-뷰-XXX 패턴.md
+++ b/9장. 모델-뷰-XXX 패턴.md
@@ -74,3 +74,35 @@
 7. 단점
    - View와 Presenter 사이의 의존성이 높다.
    - 애플리케이션이 복잡해질수록 View와 Presenter 사이의 의존성이 강해진다.
+
+## 모델-뷰-뷰모델(Model-View-ViewModel)
+
+1. 정의
+   - MVVM 패턴은 Model + View + ViewModel을 합친 용어이다. Model과 View는 다른 패턴과 동일하다.
+2. 클래스 다이어그램
+   - ![모델 뷰 프레젠터 패턴 클래스다이어그램](./img/modelViewViewModel_pattern_uml.png)
+3. 구성요소
+   - Model
+     - 애플리케이션에서 사용되는 데이터와 그 데이터를 처리한다.
+   - View
+     - 사용자에게 보여지는 UI 부분이다.
+     - 화면에 Model이 가진 데이터를 보여주는 역할을 한다.
+   - ViewModel
+     - View를 표현하기 위해 만든 View를 위한 Model이다.
+4. 동작
+   1. 사용자의 Action들은 View를 통해 들어오게 된다.
+   2. View에 Action이 들어오면, Command 패턴으로 View Model에 Action을 전달한다.
+   3. View Model은 Model에게 데이터를 요청한다.
+   4. Model은 View Model에게 요청받은 데이터를 응답한다.
+   5. View Model은 응답 받은 데이터를 가공하여 저장한다.
+   6. View는 View Model과 Data Binding하여 화면을 나타낸다.
+5. 특징
+   - Command 패턴과 Data Binding 두 가지 패턴을 사용하여 구현되었다.
+   - Command 패턴과 Data Binding을 이용하여 View와 View Model 사이의 의존성을 없앴다.
+   - View Model과 View는 1:n 관계입니다.
+6. 장점
+   - View와 Model 사이의 의존성이 없다.
+   - Command 패턴과 Data Binding을 사용하여 View와 View Model 사이의 의존성이 없다.
+   - 각각의 부분은 독립적이기 때문에 모듈화하여 개발할 수 있다.
+7. 단점
+   - View Model의 설계가 쉽지 않다.
